Minimal Modification of the Theme.

--- a/_includes/partial/site-title.html
+++ b/_includes/partial/site-title.html
@@ -1,6 +1,6 @@
 {% if page.layout == "default" %}
     <h1 class="site-title">
-        <a href="{{ '/' | relative_url }}">{{ site.title }}</a>
+        <a href="{{ '/' | relative_url }}"><img src="/assets/images/nugunabooks_200x50.png" /></a>
     </h1>
 {% else %}
     <h3 class="site-title">
